--- a/README
+++ b/README
@@ -4,7 +4,9 @@ https://flask.palletsprojects.com/en/3.0.x/installation/ - Reference to start ve
 * Task 2 complete - 6 hrs. 1:30 AM 1/31/24
 * Task 3 ongoing - 6.5 hrs. 2 AM 1/31/24
 * Task 3 ongoing - 7.5 hrs. 4 PM 1/31/24
+* Task 3 ongoing - 8 hrs. 4:30 PM 1/31/24
 
 Exposed function to find closest station to coordinates using Flask. Exposed a GET endpoint wherein lat, long can be passed in as parameters.
+Adding Redis/or similar external caching mechanism.
 
 
