--- a/README
+++ b/README
@@ -5,8 +5,10 @@ https://flask.palletsprojects.com/en/3.0.x/installation/ - Reference to start ve
 * Task 3 ongoing - 6.5 hrs. 2 AM 1/31/24
 * Task 3 ongoing - 7.5 hrs. 4 PM 1/31/24
 * Task 3 ongoing - 8 hrs. 4:30 PM 1/31/24
+* Task 3 ongoing - 8.5 hrs. 7 PM 1/31/24
+* Task 3 ongoing - 9 hrs. 9:30 PM 1/31/24
 
 Exposed function to find closest station to coordinates using Flask. Exposed a GET endpoint wherein lat, long can be passed in as parameters.
-Adding Redis/or similar external caching mechanism.
+Adding Redis/Memcached/or similar external caching mechanism.
 
 
